typescript/checker/tests/conformance/interfaces/interfacesExtendingClasses/interfaceExtendingClassWithPrivates2.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            294,
        ),
        hi: BytePos(
            295,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/interfaces/interfacesExtendingClasses/interfaceExtendingClassWithPrivates2.ts:24:5
   |
24 | var i: I5;
   |     ^

error: AssignFailed {
    left: TsKeywordType(
        TsKeywordType {
            span: Span {
                lo: BytePos(
                    309,
                ),
                hi: BytePos(
                    315,
                ),
                ctxt: #0,
            },
            kind: TsStringKeyword,
        },
    ),
    right: TsIndexedAccessType(
        TsIndexedAccessType {
            span: Span {
                lo: BytePos(
                    319,
                ),
                hi: BytePos(
                    321,
                ),
                ctxt: #0,
            },
            obj_type: TsTypeRef(
                TsTypeRef {
                    span: Span {
                        lo: BytePos(
                            297,
                        ),
                        hi: BytePos(
                            299,
                        ),
                        ctxt: #0,
                    },
                    type_name: Ident(
                        Ident {
                            span: Span {
                                lo: BytePos(
                                    297,
                                ),
                                hi: BytePos(
                                    299,
                                ),
                                ctxt: #0,
                            },
                            sym: Atom('I5' type=inline),
                            type_ann: None,
                            optional: false,
                        },
                    ),
                    type_params: None,
                },
            ),
            index_type: TsKeywordType(
                TsKeywordType {
                    span: Span {
                        lo: BytePos(
                            319,
                        ),
                        hi: BytePos(
                            321,
                        ),
                        ctxt: #0,
                    },
                    kind: TsStringKeyword,
                },
            ),
        },
    ),
    cause: [],
}
  --> $DIR/tests/conformance/interfaces/interfacesExtendingClasses/interfaceExtendingClassWithPrivates2.ts:25:8
   |
25 | var r: string = i.z;
   |        ^^^^^^^^^^^^

